[package]
name = "yuchi"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }
rpassword = "7.4.0"
colored = "2.2.0"
indicatif = "0.17.8"
prettytable = "0.10.0"
base64 = "0.22.1"
dirs = "5.0.1"
confy = "0.6"